--- a/src/dogs/NewDogForm.scss
+++ b/src/dogs/NewDogForm.scss
@@ -1,11 +1,11 @@
-.new-todo-form {
+.new-dog-form {
     border-radius: 8px;
     padding: 16px;
     text-align: center;
     box-shadow: 0 4px 8px grey;
 }
 
-.new-todo-input {
+.new-dog-input {
     font-size: 16px;
     padding: 8px;
     border: none;
@@ -15,7 +15,7 @@
     outline: none;
 }
 
-.new-todo-button {
+.new-dog-button {
     font-size: 16px;
     padding: 8px;
     border: none;
