--- a/src/dogs/TableBody.scss
+++ b/src/dogs/TableBody.scss
@@ -2,7 +2,7 @@
 
 $header-height: 2.5rem;
 
-.player-table {
+.dog-table {
   margin-top: 3.5rem;
   padding-top: calc(#{$header-height} + 1px); // 1px for border of header
 }
