--- a/src/scss/DogListItem.scss
+++ b/src/scss/DogListItem.scss
@@ -2,7 +2,11 @@
     background: #fff;
     border-radius: 8px;
     margin-top: 8px;
-    padding: 16px;
+    padding: {
+        top: 8px;
+        bottom: 8px;
+        left: 30px;
+    };
     position: relative;
     box-shadow: 0 4px 8px grey;
 }
@@ -10,7 +14,7 @@
 .buttons-container {
     position: absolute;
     right: 12px;
-    bottom: 12px;
+    bottom: 50px;
 }
 
 button {
@@ -29,5 +33,15 @@ button {
     cursor: pointer;
     color: #888;
     align-content: center;
+    font-size: 30px;
+}
+
+.dog-add-button {
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: #888;
+    align-content: end;
     font-size: 30px;
 }
