--- a/src/scss/AddEditDogForm.scss
+++ b/src/scss/AddEditDogForm.scss
@@ -1,11 +1,11 @@
-.new-dog-form {
+.add-edit-dog-form {
     border-radius: 8px;
     padding: 16px;
     text-align: center;
     box-shadow: 0 4px 8px grey;
 }
 
-.new-dog-input {
+.add-edit-dog-input {
     font-size: 16px;
     padding: 8px;
     border: none;
@@ -15,7 +15,7 @@
     outline: none;
 }
 
-.new-dog-button {
+.add-edit-dog-button {
     font-size: 16px;
     padding: 8px;
     border: none;
@@ -24,5 +24,5 @@
     cursor: pointer;
     margin-left: 8px;
     width: 20%;
-    background-color: #22ee22;
+    background-color: lightslategrey;
 }
