--- a/src/scss/DogTable.scss
+++ b/src/scss/DogTable.scss
@@ -2,54 +2,71 @@
 
 $header-height: 2.5rem;
 
-.dog-table {
-  margin-top: 3.5rem;
-  padding-top: calc(#{$header-height} + 1px); // 1px for border of header
-}
-
 .table {
   border-collapse: collapse;
   table-layout: fixed;
   width: 100%;
 
+  td {
+    text-align: left;
+    color: $graphite;
+    padding-left: 20px;
+    vertical-align: middle;
+    font-weight: 300;
+  }
+
   &--fixed {
+    height: 50px;
     background-color: $pearl;
     border-bottom: 1px solid $fog;
+    border-top: 1px solid $fog;
     left: 0;
     position: fixed;
-    top: 3.5rem;
+    top: 2.98rem;
     z-index: 1;
   }
 
   &--body {
     background-color: $snow;
+    border-top: 1000px;
   }
 
   &__row {
     background-color: $snow;
     transition: background-color 0.15s;
+    font-size: 18px;
+    font-weight: 300;
 
     &:hover {
       background-color: $pearl;
     }
-
-    &:not(:last-child) {
-      border-bottom: 1px solid $pearl;
-    }
   }
 
   &__header {
-    letter-spacing: 0.00937em;
-    line-height: 1.75rem;
-    font-size: 1rem;
-    font-weight: 600;
-    height: $header-height;
-    text-align: left;
-    vertical-align: middle;
+    margin-left: 2.0rem;
+    line-height: 3rem;
+    margin-bottom: 1.5rem;
+    font-size: 1.8rem;
   }
 
   &__button {
-    text-align: center;
-    width: 4rem;
+    text-align: right;
+    width: 3rem;
+    vertical-align: middle;
+    border: none;
+    background: none;
+    font-size: 30px;
   }
+}
+
+.add-dog-button {
+  background: none;
+  bottom: 12px;
+  right: 28px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: #888;
+  font-size: 20px;
+  position: absolute;
 }
