--- a/src/scss/AddEditDog.scss
+++ b/src/scss/AddEditDog.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .add-edit-dog-form {
     border-radius: 8px;
     padding: 16px;
@@ -16,13 +18,32 @@
 }
 
 .add-edit-dog-button {
-    font-size: 16px;
+    font-size: 18px;
+    height: 34px;
+    font-weight: 550;
+    color: white;
     padding: 8px;
     border: none;
-    border-radius: 8px;
+    border-radius: 5px;
     outline: none;
     cursor: pointer;
     margin-left: 8px;
-    width: 20%;
-    background-color: lightslategrey;
+    width: 18%;
+    background-color: #888;
+}
+
+.fa-window-close {
+    color: white;
+    font-size: 38px;
+    border: none;
+    background-color: white;
+}
+
+.close-button {
+    color: white;
+    padding: {
+        top: 9px;
+        bottom: 10px;
+        right: 10px;
+    }
 }
