--- a/src/scss/DogDetails.scss
+++ b/src/scss/DogDetails.scss
@@ -1,26 +1,49 @@
 .title-table {
-    border: 1px solid black;
     width: 100%;
 }
 
 .table-header {
-    border: 1px solid black;
-    font-size: 20px;
+    border: {
+      bottom: 1px solid black;
+    }
+    font-size: 16px;
     padding: {
-      left: 15px;
+      left: 5px;
       right: 50px;
-      top: 8px;
-      bottom: 8px;
+      top: 6px;
+      bottom: 6px;
     }
 }
 
 .table-data {
-    border: 1px solid black;
     font-size: 16px;
     padding: {
-      left: 15px;
+      left: 5px;
       right: 50px;
-      top: 8px;
-      bottom: 8px;
+      top: 6px;
+      bottom: 6px;
     }
+}
+
+hr {
+  margin-top: 0;
+  background-color: black;
+  height: 1px;
+  border: none;
+  max-width: 100%;
+}
+
+.title-action-button {
+  font-size: 18px;
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: #888;
+  padding: {
+    top: 4px;
+    bottom: 4px;
+    left: 0px;
+    right: 0px;
+  }
 }
