--- a/src/scss/DogDetails.scss
+++ b/src/scss/DogDetails.scss
@@ -19,8 +19,8 @@
     }
     font-size: 16px;
     padding: {
-      left: 5px;
-      right: 50px;
+      left: 4px;
+      right: 0;
       top: 6px;
       bottom: 6px;
     }
@@ -29,8 +29,8 @@
 .table-data {
     font-size: 16px;
     padding: {
-      left: 5px;
-      right: 50px;
+      left: 4px;
+      right: 0;
       top: 6px;
       bottom: 6px;
     }
@@ -44,7 +44,24 @@ hr {
   max-width: 100%;
 }
 
-.title-action-button {
+.title-edit-button {
+  float: right;
+  font-size: 18px;
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: #888;
+  padding: {
+    top: 7px;
+    bottom: 4px;
+    left: 0;
+    right: 0;
+  }
+}
+
+.title-delete-button {
+  float: right;
   font-size: 18px;
   background: none;
   border: none;
@@ -55,7 +72,7 @@ hr {
     top: 4px;
     bottom: 4px;
     left: 0;
-    right: 0;
+    right: 12px;
   }
 }
 
@@ -81,7 +98,9 @@ hr {
 .text-style {
   font-weight: bold;
   font-size: 20px;
-  padding: {right: 10px}
+  padding: {
+    right: 10px
+  }
 }
 
 .caption-style {
